--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
   </script>
+  <script type="text/javascript">
+  var addthis_share = {
+    templates: { twitter: '{{title}} {{url}} via @partit_pirata #megacomplaint' }
+  }
+  </script>
 </head>
 <body>
   <div class="container">
