--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
   </script>
-  <script type="text/javascript">
+  <script>
   var addthis_share = {
-    templates: { twitter: '{{title}} {{url}} via @partit_pirata #megacomplaint' }
+    templates : {
+        twitter : "Joint complaint of the affected by the closure of Megaupload #megacomplaint via @partit_pirata"
+    }
   }
-  </script>
+</script>
 </head>
 <body>
   <div class="container">
@@ -46,7 +48,7 @@
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet"></a>
+            <a class="addthis_button_tweet" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
