--- a/index.html
+++ b/index.html
@@ -23,13 +23,6 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
   </script>
-  <script>
-  var addthis_share = {
-    templates : {
-        twitter : "Joint complaint of the affected by the closure of Megaupload #megacomplaint via @partit_pirata"
-    }
-  }
-</script>
 </head>
 <body>
   <div class="container">
@@ -48,7 +41,7 @@
 			<!-- AddThis Button BEGIN -->
             <div class="addthis_toolbox addthis_default_style ">
             <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-            <a class="addthis_button_tweet" tw:via="partit_pirata"></a>
+            <a class="addthis_button_tweet" tw:url="http://megaupload.pirata.cat/" tw:hashtags="#megacomplaint" tw:via="partit_pirata"></a>
             <a class="addthis_button_google_plusone" g:plusone:size="medium"></a>
             <a class="addthis_counter addthis_pill_style"></a>
             </div>
